--- a/templates/egresos/ordenpago/cpb_rec_pago_listado.html
+++ b/templates/egresos/ordenpago/cpb_rec_pago_listado.html
@@ -38,7 +38,7 @@
                         </thead>
                         <tbody>
                             {% for cpb in comprobantes %}
-                            <tr {% if cpb.estado.pk = 3 %}class="{{cpb.estado.color}}"{% endif %}>                                                        
+                            <tr {% if cpb.estado.pk = 3 %}class="{{cpb.estado_color}}"{% endif %}>                                                        
                                 <td><div class="btn-group">
                                       <button type="button" title="{{ cpb.pk|safe}}" class="btn btn-xs color_barra" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         <i class="icon-settings"> </i> <span class="caret"></span>
