--- a/templates/trabajos/orden_colocacion/oc_listado.html
+++ b/templates/trabajos/orden_colocacion/oc_listado.html
@@ -57,7 +57,7 @@
                                     </div>                              
                                 </td> 
                                 
-                                <td class="listado_estado {{orden.estado.color}}">{{orden.estado|default_if_none:'A CONFIRMAR'}}</td>
+                                <td class="listado_estado {{orden.estado_color}}">{{orden.estado|default_if_none:'A CONFIRMAR'}}</td>
                                 <td class="text-center">{{orden.fecha_colocacion|date:'d/m/Y'}}</td>                                
                                 <td>{{ orden}}</td>                                
                                 <td title="{{ orden.orden_trabajo.orden_pedido.cliente}}"><a href="{% url 'cliente_ver' id=orden.orden_trabajo.orden_pedido.cliente.id %}"   class="modal-detail" data-modal-head="DETALLE CLIENTE {{orden.orden_trabajo.orden_pedido.cliente.codigo}}" data-fm-callback="reload">
