--- a/templates/egresos/compras/cpb_compra_listado.html
+++ b/templates/egresos/compras/cpb_compra_listado.html
@@ -109,7 +109,7 @@
                                     <input type="checkbox" class='tildado' id="chk_{{forloop.counter0}}" value="{{ cpb.pk|safe }}"/>
                                     {% endif %}
                                 </td>
-                                <td class="listado_estado {{cpb.estado.color}}">{{cpb.estado}}</td>
+                                <td class="listado_estado {{cpb.estado_color}}">{{cpb.estado}}</td>
                                 <td class="text-center" title="Fecha Creación: {{cpb.fecha_creacion|date:'d/m/Y H:i'}}">{{cpb.fecha_cpb|date:'d/m/Y'}}</td>
                                 <td class="text-center" title="{{ cpb.cpb_tipo|default_if_none:'' }}">{{ cpb.cpb_tipo.codigo|default_if_none:'' }}</td>
                                 <td>{{ cpb}}</td>                                
