--- a/templates/general/facturas/orden_pago.html
+++ b/templates/general/facturas/orden_pago.html
@@ -114,7 +114,7 @@
 </table>
 {% endif %}
 <div id="page-footer">
-  <table width="100%" align="center" >    
+  <table width="100%" align="middle" >    
     <tr>
       <td width="90%" class="listado_final borde_izq borde_arriba borde_abajo tabla_footer">TOTAL:</td>
       <td width="10%" class="listado_final borde_der borde_arriba borde_abajo tabla_footer">$ {{cpb.importe_total|default_if_none:0|floatformat:2|intcomma}}</td>
