--- a/templates/general/facturas/encabezado.html
+++ b/templates/general/facturas/encabezado.html
@@ -1,15 +1,15 @@
 {% load static from staticfiles %}
 {% load humanize %}
 {% load comprobantes_filters %}
-<table width="100%" align="middle" >
+<table width="100%" align="center" >
   <tr>
     {% if tipo_logo_factura == 3 %} 
-       <td align="middle" rowspan="5" width="20%" valign="middle" class="borde_izq borde_arriba borde_abajo">
+       <td align="center" rowspan="5" width="20%" valign="middle" class="borde_izq borde_arriba borde_abajo">
            {% if ruta_logo|existe_img %} 
           <img src="/media/{{ruta_logo|existe_img}}" alt="logo" class="logo_factura" /> 
           {% endif %} 
       </td>
-      <td align="middle" rowspan="5" width="26%" valign="middle" class="borde_arriba borde_abajo">       
+      <td align="center" rowspan="5" width="26%" valign="middle" class="borde_arriba borde_abajo">       
           <h1 class="empresa">{{nombre_fantasia}}</h1>          
           <h3>{{domicilio}}</h3>
           <h3>{{email}}</h3>
@@ -17,7 +17,7 @@
       </td>
 
     {% elif tipo_logo_factura == 2 %}
-      <td align="middle" rowspan="5" width="46%" valign="middle" class="borde_izq borde_arriba borde_abajo">
+      <td align="center" rowspan="5" width="46%" valign="middle" class="borde_izq borde_arriba borde_abajo">
         {% if ruta_logo|existe_img %} 
           <img src="/media/{{ruta_logo|existe_img}}" alt="logo" class="logo_factura" /> {% else %}
           <h1 class="empresa">{{nombre_fantasia}}</h1>          
@@ -28,7 +28,7 @@
       </td>
 
     {% else %}
-    <td align="middle" rowspan="5" width="46%" valign="middle" class="borde_izq borde_arriba borde_abajo">     
+    <td align="center" rowspan="5" width="46%" valign="middle" class="borde_izq borde_arriba borde_abajo">     
         <h1 class="empresa">{{nombre_fantasia}}</h1>          
         <h3>{{domicilio}}</h3>
         <h3>{{email}}</h3>
@@ -36,13 +36,13 @@
     </td>
 
     {% endif %}
-    <td colspan="2" align="middle" valign="middle" class="borde letra_cpb">
+    <td colspan="2" align="center" valign="middle" class="borde letra_cpb">
       <span class="letra_cpb">{{cpb.letra|upper}}</span><p class="letra_cod">{% if tipo %}{{tipo}}{% else %}COD.{{codigo_letra}}{% endif %}</p>
     </td>
     <td colspan="2" class="nombre_cpb borde_arriba borde_der">{% if tipo_cpb %}{{tipo_cpb|upper}}{% else %}{{cpb.cpb_tipo.nombre|upper}}{% endif %}<p class="letra_cod">{{leyenda}}</p>
   </tr>
   <tr>
-    <td width="5%" align="middle" class="">&nbsp;</td>
+    <td width="5%" align="center" class="">&nbsp;</td>
     <td width="5%" align="center " class="borde_izq">&nbsp;</td>
     <td width="22%" class="texto_cpb">Nº: {{cpb.get_numero}}</td>
     <td width="22%" class="texto_cpb borde_der">Fecha: {{cpb.fecha_cpb|date:'d/m/Y'}}</td>
