--- a/templates/general/facturas/presupuesto.html
+++ b/templates/general/facturas/presupuesto.html
@@ -103,7 +103,7 @@
   </tr>
 </table>
 <br>
-<table width="100%" align="middle" >    
+<table width="100%" align="center" >    
     {%if cpb.observacion %}
     <tr>
       <td class="listado_izq borde_arriba borde_izq borde_abajo borde_der">Observaciones: <strong>{{cpb.observacion|default_if_none:''}}</strong></span></td>      
@@ -122,7 +122,7 @@
 </table>
 <div id="page-footer">
   <hr/>
-  <table width="100%" align="middle" >        
+  <table width="100%" align="center" >        
     <tr>
       <td width="50%" class="listado_izq  "></td>
       <td width="25%" class="listado_final ">{%if discrimina_iva %}Importe Neto Gravado:{%endif%}</td>
