--- a/templates/general/facturas/nota_pedido.html
+++ b/templates/general/facturas/nota_pedido.html
@@ -6,9 +6,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>{{pedido|upper}}</title>
-
+<link rel="stylesheet" href="{% static 'css/reportes_factura.css' %}" type="text/css" />
 <style type="text/css">
-@import url("{% static 'css/reportes_factura.css'%}");
 
  @page {
          margin: 1cm 0.5cm 1cm 0.5cm;
@@ -18,8 +17,7 @@
                         bottom: 0.5cm;
                         height: 4cm;
                         margin-right: 0.5cm;                        
-                        margin-left: 0.5cm;                        
-                        width: 100%;
+                        margin-left: 0.5cm;                                                
                     }
          @frame header {
                         -pdf-frame-content: page-header;
