--- a/templates/general/facturas/orden_pago.html
+++ b/templates/general/facturas/orden_pago.html
@@ -7,9 +7,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>{{cpb|upper}}</title>
-
+<link rel="stylesheet" href="{% static 'css/reportes_factura.css' %}" type="text/css" />
 <style type="text/css">
-@import url("{% static 'css/reportes_factura.css'%}");
 
  @page {
          margin: 0.5cm 0.5cm 0.5cm 0.5cm;
@@ -19,8 +18,7 @@
                         bottom: 0.5cm;
                         height: 3cm;
                         margin-right: 0.5cm;                        
-                        margin-left: 0.5cm;                        
-                        width: 100%;
+                        margin-left: 0.5cm;                                                
                     }
          @frame header {
                         -pdf-frame-content: page-header;
