--- a/templates/general/facturas/remito.html
+++ b/templates/general/facturas/remito.html
@@ -7,9 +7,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>{{cpb|upper}}</title>
-
+<link rel="stylesheet" href="{% static 'css/reportes_factura.css' %}" type="text/css" />
 <style type="text/css">
-@import url("{% static 'css/reportes_factura.css'%}");
 
  @page {
          margin: 0.5cm 0.5cm 0.5cm 0.5cm;
@@ -20,7 +19,6 @@
                         height: 4cm;
                         margin-right: 0.5cm;                        
                         margin-left: 0.5cm;                        
-                        width: 100%;
                     }
          @frame header {
                         -pdf-frame-content: page-header;
